Fixed links for pictures and formatting for articles. Moved OFiD Articles from homw to explore.html. Deleted duplicate Kin info.

--- a/community.html
+++ b/community.html
@@ -184,7 +184,7 @@
 				<!-- Ad Banner -->
 				<section id="OFiD-banner" class="ad-banner">
 					<div style="text-align: center;">
-						<a href="https://t.me/KinCryptoTelegram" style="border-bottom: none;">
+						<a href="explore.html" style="border-bottom: none;">
 							<img src="/assets/images/banner-ofid.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
 						</a>
 					</div>
@@ -254,14 +254,14 @@
 				</article>
 				
 				<!-- Ad Banner -->
-				<section id="ofid-bouner" class="ad-banner">
+				<section id="ofid-bouncer" class="ad-banner">
 					<div style="text-align: center;">
 						<a href="https://t.me/OFiDBall" style="border-bottom: none;">
 							<img src="/assets/images/ofidkid-buster-bouncer-01.jpg" alt="Ad Banner"
 								style="max-width: 100%; height: auto;">
 						</a>
-						<p>We authorize you to explore our <a href="/pages/affiliate.html">partner connections</a>
-							to discover additional communities and services. Buster says that's an order!</p>
+						<p>Buster says you can also explore our <a href="/pages/affiliate.html">Partner Connections</a>
+							to discover additional communities and services. "That's an order!"</p>
 					</div>
 				</section>
 			</div>
