--- a/ofidkid.html
+++ b/ofidkid.html
@@ -147,7 +147,7 @@
 				<header class="major">
 					<span class="date">Lil' Superstars</span>
 					<h1>The OFiD Kid</h1>
-					<p>The OFiD Kid is the lead member in the famous trio known as <b>The OFiD Crew</b>! Coming soon to screens near you, The OFiD Kid is real; and he's joining us on our Web3 adventures!</p>
+					<p>The OFiD Kid is the lead member in the famous trio known as <b>The OFiD Crew</b> coming soon to screens near you. The OFiD Kid is real; and he's joining us on our Web3 adventures!</p>
 				</header>
 
 				<!-- OFiD Kid Crew Articles -->
@@ -156,7 +156,7 @@
 						<div class="product-content">
 							
 							<!-- Section 1 - Left Image -->
-							<span class="image left"><img src="assets/images/ofidkid-giddy-02.jPG"
+							<span class="image left"><img src="assets/images/ofidkid-giddy-02.JPG"
 									alt="OFiD Crew Giddy Character"></span>
 							<h2 style="text-align: left;">Meet the Crew: Giddy</h2>
 							<p>Giddy is the fun-loving, happy-go-lucky member of the OFiD Crew, bringing joy and excitement wherever he goes.
@@ -186,7 +186,7 @@
 						<thead>
 							<tr>
 								<th colspan="2">
-									<h2>The Crew on Socials</h2>
+									<h2>Follow OFiD Kid</h2>
 								</th>
 							</tr>
 						</thead>
