--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -106,7 +106,6 @@
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../explore.html">e𝕏P Web3™</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
-							<li><a href="../kincommunity.html">Kin Community</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -209,7 +208,7 @@
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
 							<p style="text-align: center;">OFiDCrypt works with a blend of community and sponsored partnerships. We are pleased to
-								offer you a variety of services and social spaces, providing the opportunity to experience web3 at its fullest. You
+								offer you a variety of services and social spaces, providing the opportunity to experience Web3 at its fullest. You
 								can visit <a href="../community.html">Our Community</a> to get started and see where the journey takes you!</p>
 					</footer>
                 </section>
