--- a/cashlinks.html
+++ b/cashlinks.html
@@ -102,11 +102,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="explore.html">e𝕏P Web3™</a></li>
-					<li><a href="community.html">Community</a></li>
-					<li><a href="pages/livestream.html">Livestream</a></li>
-					<li><a href="ofidkid.html">The OFiD Kid</a></li>
-					<li><a href="pages/about.html">About Us</a></li>
+					<li class="active"><a href="cashlinks.html">Cash Linnks</a></li>
 				</ul>
 
 				<ul class="icons">
