--- a/explore.html
+++ b/explore.html
@@ -107,8 +107,10 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li class="active"><a href="explore.html">e𝕏P Web3™</a></li>
-					<li><a href="https://phantom.com/download">Phantom Wallet</a></li>
-					<li><a href="https://hvr.world/">Hvr Browser</a></li>
+					<li><a href="community.html">Community</a></li>
+					<li><a href="pages/livestream.html">Livestream</a></li>
+					<li><a href="ofidkid.html">The OFiD Kid</a></li>
+					<li><a href="pages/about.html">About Us</a></li>
 				</ul>
 				<ul class="icons">
 					<li>
