--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -105,7 +105,10 @@
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../explore.html">e𝕏P Web3™</a></li>
-							<li class="active"><a href="vipwithcode.html">Code Wallet</a></li>
+							<li><a href="../community.html">Community</a></li>
+							<li><a href="livestream.html">Livestream</a></li>
+							<li><a href="../ofidkid.html">The OFiD Kid</a></li>
+							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
