Minor formatting changes. Changed the spacing of some elements.

--- a/community.html
+++ b/community.html
@@ -159,35 +159,22 @@
 
 				<!-- Community Connections Section -->
 				<section class="partner-section">
-					<header>
-						<!-- Connection Name 1 -->
-						<h2>The OFiDCrypt Community</h2>
-					</header>
 
 					<!-- Connection Platform 1 -->
 					<article class="product-section">
 						<div class="product-wrapper">
 							<div class="product-content">
-								<span class="image left"><img src="assets/images/expb.png" alt="e𝕏P Web3™ Logo"></span>
+								<span class="image left"><img src="assets/images/bouncy-ball-dispense.jpg" alt="Bouncy Ball & Ramp Img"></span>
+								<h2 style="text-align: left;">OFiDCrypt Community</h2>
 								<p>We're dedicated to making crypto and web3 more friendly and fun for everyone, from newbies to
 									seasoned enthusiasts. In our community space, we emphasize engaging with each other, sharing ideas, and
 									collaborating on exciting projects. Members can share pictures, participate in polls, and have fun together while
-									staying updated with buy alerts.
+									dispensing balls and staying updated with buy alerts.
 									We also prioritize security, ensuring our Telegram group is spam-free and safe for all members to enjoy meaningful
-									interactions. Our inclusive environment ensures that everyone feels welcome and valued as we continuously work to
-									improve and clarify our offerings!</p>
+									interactions!</p>
 							</div>
 						</div>
 					</article>
-				</section>
-
-				<!-- Ad Banner -->
-				<section id="OFiD-banner" class="ad-banner">
-					<div style="text-align: center;">
-						<a href="explore.html" style="border-bottom: none;">
-							<img src="/assets/images/banner-ofid.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
-						</a>
-					</div>
 				</section>
 
 				<!-- Community Links Table -->
