--- a/index.html
+++ b/index.html
@@ -194,15 +194,19 @@
 								</div>
 								
 								<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
+
+								<!-- Page Button Style -->
 								<style>
 									.button {
 										display: inline-block;
-    border-radius: 20px;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    text-align: center; /* This property centers the text */
-    transition: background-color 0.3s ease;
+										border-radius: 20px;
+										text-decoration: none;
+										border: none;
+										cursor: pointer;
+										text-align: center;
+										margin-top: 2rem;
+										/* This property centers the text */
+										transition: background-color 0.3s ease;
 									}
 								</style>
 								<!-- Chart Button -->
