--- a/kincommunity.html
+++ b/kincommunity.html
@@ -165,7 +165,7 @@
 						<thead>
 							<tr>
 								<th colspan="2">
-									<h2>Get Connected</h2>
+									<h2>Kin Socials</h2>
 								</th>
 							</tr>
 						</thead>
