--- a/pages/about.html
+++ b/pages/about.html
@@ -181,9 +181,9 @@
 								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
 
 							<!-- Section 2 - Right Image -->
-							<a href="https://ofidcrypt.ca/its-official-hvr-site-partnership-announced">
-								<span class="image right"><img src="../assets/images/hvr-sitepartner.png"
-										alt="Docs Image Tile"></span>
+							<a href="https://www.ofidcrypt.ca/">
+								<span class="image right"><img src="../assets/images/expb.png"
+										alt="e𝕏P Web3™ Logo"></span>
 							</a>
 
 							<p>By partnering with leading Web3 software developers, our company can subtly introduce
