Fixed some allignment issues and added socials banners.

--- a/community.html
+++ b/community.html
@@ -180,13 +180,14 @@
 				<!-- Community Links Table -->
 				<section class="community-links">
 					<table>
-						<thead>
-							<tr>
-								<th colspan="2">
-									<h2>Join Socials</h2>
-								</th>
-							</tr>
-						</thead>
+						<!-- Ad Banner -->
+						<section id="expb-ball" class="ad-banner">
+							<div style="text-align: center;">
+								<a href="https://t.me/OFiDBall" style="border-bottom: none;">
+									<img src="/assets/images/banner-socials.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+								</a>
+							</div>
+						</section>
 						<tbody>
 							<tr>
 								<td>Follow on <br />
@@ -209,8 +210,7 @@
 									Room <a href="https://app.flipchat.xyz/room/350"><b>#350</b></a></td>
 								<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for
 										iOS</a><br />
-									<a
-										href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get
+									<a href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get
 										for Android</a>
 								</td>
 							</tr>
@@ -331,8 +331,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/community.html">Community</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
