--- a/kincommunity.html
+++ b/kincommunity.html
@@ -162,13 +162,14 @@
 				<!-- Community Links Table -->
 				<section class="community-links">
 					<table>
-						<thead>
-							<tr>
-								<th colspan="2">
-									<h2>Kin Socials</h2>
-								</th>
-							</tr>
-						</thead>
+						<!-- Ad Banner -->
+						<section id="expb-ball" class="ad-banner">
+							<div style="text-align: center;">
+								<a href="https://t.me/OFiDBall" style="border-bottom: none;">
+									<img src="/assets/images/banner-socials-bw.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+								</a>
+							</div>
+						</section>
 						<tbody>
 							<tr>
 								<td>Join on <b>Flipchat</b> <br />
@@ -411,8 +412,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/community.html">Community</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
