--- a/ofidkid.html
+++ b/ofidkid.html
@@ -170,7 +170,7 @@
 							<!-- Section 2 - Right Image -->
 							<span class="image right"><img src="assets/images/ofidkid-buster-bouncer-02.jpg"
 									alt="OFiD Crew Buster Character"></span>
-							<h2 style="text-align: right;">Meet the Crew: Buster</h2>
+							<h2 style="text-align: right;">Buster the Bouncer</h2>
 							<p>Buster is the rugged bouncer of the OFiD Crew, known for his tough exterior and heart of gold. With a striking teal
 								and purple color scheme, Buster stands out in any crowd. He dons a leather jacket that adds to his tough persona,
 								but don't let his appearance fool you—Buster, also known as "Buster Bounce," is fiercely loyal and protective of his friends. As the unofficial
@@ -184,13 +184,14 @@
 				<!-- Community Links Table -->
 				<section class="community-links">
 					<table>
-						<thead>
-							<tr>
-								<th colspan="2">
-									<h2>Follow OFiD Kid</h2>
-								</th>
-							</tr>
-						</thead>
+						<!-- Ad Banner -->
+						<section id="expb-ball" class="ad-banner">
+							<div style="text-align: center;">
+								<a href="https://t.me/OFiDBall" style="border-bottom: none;">
+									<img src="/assets/images/ofidkid-hoodie-banner-socials.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+								</a>
+							</div>
+						</section>
 						<tbody>
 							<tr>
 								<td>TikTok</td>
@@ -203,13 +204,6 @@
 							</tr>
 						</tbody>
 					</table>
-				</section>
-				
-				<!-- Ad Banner -->
-				<section id="ofidkid-hoodie" class="ad-banner">
-					<div style="text-align: center;">
-							<img src="/assets/images/ofidkid-hoodie-banner.png" alt="OFiD Kid Hoodie Banner" style="max-width: 100%; height: auto;">
-					</div>
 				</section>
 
 				<!-- More About The OFiD Crew -->
@@ -298,8 +292,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/community.html">Community</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
