--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -290,8 +290,9 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Partners</a></li>
+					<ul>
 						<li><a href="../community.html">Community</a></li>
+						<li><a href="affiliate.html">Partners</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
