--- a/chart.html
+++ b/chart.html
@@ -102,8 +102,12 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li ><a href="index.html">Home</a></li>
-				<li class="active"><a href="chart.html">e𝕏PB Chart</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="explore.html">e𝕏P Web3™</a></li>
+				<li><a href="community.html">Community</a></li>
+				<li><a href="pages/livestream.html">Livestream</a></li>
+				<li><a href="ofidkid.html">The OFiD Kid</a></li>
+				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -213,8 +217,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/community.html">Community</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
