--- a/explore.html
+++ b/explore.html
@@ -403,8 +403,9 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-				<ul><li><a href="/pages/affiliate.html">Partners</a></li>
+				<ul>
 					<li><a href="/community.html">Community</a></li>
+					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
 				</ul>
