--- a/pages/about.html
+++ b/pages/about.html
@@ -234,14 +234,12 @@
 					<!-- Ad Banner & Header-->
 					<section class="partner-section">
 						<section id="docs-banner" class="ad-banner">
-							<div style="text-align: center;">
-								<header>
-									<h2>Document Library</h2>
-								</header>
-								<a href="../docs/main.html" style="border-bottom: none;">
-									<img src="/assets/images/banner-docs.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
-								</a>
-							</div>
+								<!-- Docs Button -->
+								<div class="image button-image">
+									<a href="/docs/main.html" target="_blank">
+										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
+									</a>
+								</div>
 						</section>
 					</section>
 				</div>
@@ -324,8 +322,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="affiliate.html">Partners</a></li>
 				<li><a href="../community.html">Community</a></li>
+				<li><a href="affiliate.html">Partners</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
