Minor adjustments to banner urls.

--- a/explore.html
+++ b/explore.html
@@ -213,7 +213,7 @@
 							</section>
 							
 							<header id="Guide">
-								<h2>e𝕏Plore Even More</h2>
+								<h2>e𝕏Plore More</h2>
 								<!-- Section Description -->
 								<p class="align-center">Find more Web3 apps to try by visiting this <a
 										href="https://ofidcrypt.ca/try-services-using-code-wallet-uztuawi">Blog Post</a> for partner services; hosted by Hvr Social
