--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 								</section>
 
 								<p class="align-center">Use the button to view our document library. For blog posts and articles about getting started with OFiDCrypt, visit our <a
-										href="https://ofidcrypt.ca/readme-welcome">Companion Site</a>, hosted by our site partner, HVR Social Browser.
+										href="https://ofidcrypt.ca/readme-welcome">Companion Site</a> hosted by our site partner, HVR Social Browser.
 								</p>
 								</header>
 						</article>
