--- a/community.html
+++ b/community.html
@@ -183,7 +183,7 @@
 						<!-- Ad Banner -->
 						<section id="expb-ball" class="ad-banner">
 							<div style="text-align: center;">
-								<a href="https://t.me/OFiDBall" style="border-bottom: none;">
+								<!-- <a href="#" style="border-bottom: none;"> -->
 									<img src="/assets/images/banner-socials.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
 								</a>
 							</div>
