Updated OFiDKid.html with character selection and fixed article navigation button.

--- a/community.html
+++ b/community.html
@@ -226,7 +226,7 @@
 								<span class="image right"><img src="../assets/images/ofid-exp-social-card-01.png"
 										alt="eXP Brand Card COlour Splash"></span>
 							</a>
-							<h3 style="text-align: left;">Your Platform, Your Choice</h3>
+							<h3 style="text-align: left;">Your Platform. Your Choice.</h3>
 							<p>Join like-minded individuals within the OFiDCrypt Community on 𝕏,
 								Telegram, Flipchat and more! Participate in promotions and live
 								events with e𝕏PB Bouncy Ball & Your Solana Wallet.
