--- a/explore.html
+++ b/explore.html
@@ -223,7 +223,7 @@
 							</article>
 				
 				<!-- Main -->
-				<div id="main">
+				<div id="learn">
 					<!-- Featured Post -->
 					<article id="article-featured" class="post featured">
 						<header class="major">
