--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Learn about Crypto</h3>
 								<p class="align-center">Fundamentals · Basics · Tips · Security</p> <button class="button"><a
-										href="/explore.html#learn">Go to Articles</a></button>
+										href="/explore.html#article-featured">Go to Articles</a></button>
 							</div>
 						</article>
 							</div>
