--- a/ofidkid.html
+++ b/ofidkid.html
@@ -36,23 +36,23 @@
 	<title>OFiDCrypt | Meet The OFiD Kid & Crew</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
+	<meta name="description" content="Meet The OFiD Crew and dive into their world! Discover their unique stories, thrilling missions, and get ready to join them on their Web3 adventures!">
 	<meta name="keywords" content="cryptocurrency, The OFiD Kid, The OFiD Crew, Buster, Giddy, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="OFiDCrypt | Meet The OFiD Kid & Crew">
-	<meta property="og:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/ofidkid-buster-bouncer-01">
-	<meta property="og:url" content="https://www.ofidcrypt.com/community">
+	<meta property="og:description" content="Meet The OFiD Crew and dive into their world! Discover their unique stories, thrilling missions, and get ready to join them on their Web3 adventures!">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidkid-crew.webp">
+	<meta property="og:url" content="https://www.ofidcrypt.com/ofidkid">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="OFiDCrypt | Meet The OFiD Kid & Crew">
-	<meta name="twitter:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/ofidkid-buster-bouncer-01">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/community">
+	<meta name="twitter:description" content="Meet The OFiD Crew and dive into their world! Discover their unique stories, thrilling missions, and get ready to join them on their Web3 adventures!">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidkid-crew.webp">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/ofidkid">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -179,7 +179,7 @@
 									alt="OFiD Crew Buster Character"></span>
 									<div class="quick-start-content">
 										<h3 class="quick-start-title">Buster Bounce</h3>
-										<p class="align-center">Friendly Teal Fluff & Tough!</p>
+										<p class="align-center">Friendly, Fluffy & Tough!</p>
 										<button class="button"><a href="#buster">View Profile</a></button>
 									</div>
 						</article>
