Created some new jump links for convenience and updated some tile art to new branding.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-002-1x1.jpg"
+								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-trending.jpg"
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
 												<h3 class="quick-start-title">Get e𝕏PB</h3>
@@ -222,10 +222,10 @@
 												<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
 											</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/bg-articles-lowres-square.png"
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/expb-learn.png"
 									alt="Learn Icon"></span>
 							<div class="quick-start-content">
-								<h3 class="quick-start-title">Learn about Crypto</h3>
+								<h3 class="quick-start-title">Learn about Web3</h3>
 								<p class="align-center">Fundamentals · Basics · Tips · Security</p> <button class="button"><a
 										href="/explore.html#article-featured">Go to Articles</a></button>
 							</div>
