--- a/ofidkid.html
+++ b/ofidkid.html
@@ -147,7 +147,8 @@
 				<header class="major">
 					<span class="date">Lil' Superstars</span>
 					<h1>The OFiD Kid</h1>
-					<p>The OFiD Kid is the lead member in the famous trio known as <b>The OFiD Crew</b> coming soon to screens near you. The OFiD Kid is real; and he's joining us on our Web3 adventures!</p>
+					<p>The OFiD Kid is the lead member in the famous trio known as <a href="#meet-crew">The OFiD Crew</a> coming soon to
+						screens near you. The OFiD Kid is real; and he's joining us on our Web3 adventures!</p>
 				</header>
 
 				<!-- Ad Banner -->
@@ -160,7 +161,7 @@
 				</section>
 
 				<!-- Quick Start Section -->
-				<section class="quick-start-section">
+				<section class="quick-start-section" id="meet-crew">
 					<header>
 						<h2>Meet the Crew!</h2>
 						<p>Select the characters below to learn more about them and their quirks!</p>
