Updated articles with new featured article and added #5 to articles page 2.

--- a/explore.html
+++ b/explore.html
@@ -229,14 +229,13 @@
 						<header class="major">
 							<span class="date">Articles & Featured</span>
 							<h2>Learn With <br />Articles</h2>
-							<p>Click "Preview Article" below to get a sneak peek of this featured article, available via Code Wallet for
-								only $0.25
+							<p>Check out our <b>Featured Article</b> hosted by our Sitepartner <b>Hvr Social Browser</b>. Keep scrolling to explore more articles in our library! 
 							</p>
 						</header>
-									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/pic06.jpg" alt="Article Title: A Beginners Introduction to Cryptocurrency" /></a>
+									<a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="image fit"><img src="assets/images/pic11.png" alt="Article Title: What is Solana?" /></a>
 						<ul class="actions special">
-							<li><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency"
-									class="button large">Preview Article</a></li>
+							<li><a href="https://ofidcrypt.ca/ep-learn-what-is-solana"
+									class="button large">View Article</a></li>
 						</ul>
 					</article>
 					</div>
