--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
 												<h3 class="quick-start-title">Get e𝕏PB</h3>
-												<p class="align-center">Bouncy Balls · On Solana <br />
+												<p class="align-center">Bouncy Ball · On Solana <br />
 													In Your Wallet</p>
 												<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
 											</div>
