--- a/posts-page2.html
+++ b/posts-page2.html
@@ -5,14 +5,14 @@
         <section class="posts">
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="/explore.html#pagination-controls-top">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">February 12, 2025</span>
+                    <h2><a href="https://ofidcrypt.ca/ep-learn-what-is-solana">05 What is Solana,<br /> SPL & Solana Tokens?</a></h2>
                 </header>
-                <a href="/explore.html#pagination-controls-top" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="image fit"><img src="assets/images/pic11.png" alt="" /></a>
+                <p>"Get an insight into how tokens move from one place or person to another on Solana SPL!"</p>
                 <ul class="actions special">
-                    <li><a href="/explore.html#pagination-controls-top"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://ofidcrypt.ca/ep-learn-what-is-solana"
+                        class="button">View Article</a></li>
                 </ul>
             </article>
 
