Updated some article tiles and jump links for continuity.

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -239,20 +239,17 @@
 					<section class="monthly-posts">
 						<article>
 							<header>
-								<span class="date">Coming Soon</span>
-								<h2><a href="/index.html#pagination-controls-top">e𝕏P WEB3™
-										OFiDCrypt<br /> News & Articles</a></h2>
+								<span class="date">Try OFiD Articles</span>
+								<h2><a href="/explore.html#article-featured">e𝕏P WEB3™
+										Learn<br /> News & Articles</a></h2>
 							</header>
-							<a href="/index.html#pagination-controls-top"
-								class="image fit"><img src="assets/images/pic02.jpg"
-									alt="Article Title: News & Articles Coming Soon"></a>
-							<p><b>This article will be published on Pennypost.</b>
-								Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost
-								articles to show gratitude to the contributor.
-								Code app required to purchase from Pennypost, download from <b><a
-										href="https://getcode.com">here</a>.</b></p>
+							<a href="/explore.html#article-featured"
+								class="image fit"><img src="assets/images/bg-learn-01.webp"
+									alt="Article Placeholder: e𝕏P WEB3™ Learn"></a>
+							<p>We publish in-house knowledge articles to help keep you informed and safe as you explore Web3. Use the button
+									below to see what you can learn today!</p>
 							<ul class="actions special">
-								<li><a href="/index.html#pagination-controls-top"
+								<li><a href="/explore.html#article-featured"
 										class="button">See Full Library</a></li>
 							</ul>
 						</article>
