--- a/posts-page2.html
+++ b/posts-page2.html
@@ -9,7 +9,7 @@
                     <h2><a href="https://ofidcrypt.ca/ep-learn-what-is-solana">05 What is Solana,<br /> SPL & Solana Tokens?</a></h2>
                 </header>
                 <a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="image fit"><img src="assets/images/pic11.png" alt="" /></a>
-                <p>"Get an insight into how tokens move from one place or person to another on Solana SPL!"</p>
+                <p>Get an insight into how tokens move from one place or person to another on Solana SPL!</p>
                 <ul class="actions special">
                     <li><a href="https://ofidcrypt.ca/ep-learn-what-is-solana"
                         class="button">View Article</a></li>
