Feb 26th Broadcast

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -148,10 +148,11 @@
 			<section class="livestream" id="latest-event">
 				<div class="stream video main">
 					<blockquote class="twitter-tweet" data-media-max-width="1920">
-						<p lang="en" dir="ltr">Tunining in at 3 PM in Canada for the scoop! <a
-								href="https://t.co/qoo37QZZXt">https://t.co/qoo37QZZXt</a></p>&mdash; OFiDCrypt e𝕏P Web3™ (@OFiDCrypt) <a
-							href="https://twitter.com/OFiDCrypt/status/1884738784501047782?ref_src=twsrc%5Etfw">January 29, 2025</a>
+						<p lang="en" dir="ltr">AIRDROP: Raindrop! Results to be drawn! <a
+								href="https://t.co/fNaZaUGCYm">https://t.co/fNaZaUGCYm</a></p>&mdash; OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
+						<a href="https://twitter.com/OFiDCrypt/status/1894884342003892385?ref_src=twsrc%5Etfw">February 26, 2025</a>
 					</blockquote>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
