--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -155,6 +155,7 @@
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 	
 				<!-- Revert video placeholder to poster image after video ends -->
