Changed previous stream to be added in list instead of placeholder image.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -179,7 +179,7 @@
 						<header class="major">
 							<h1 id="livestream-title">𝕏 Livestream</h1>
 							<!-- Section Description -->
-							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2025, 3:00 PM PST</a></p>
+							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Feb-26-2025, 3:00 PM PST</a></p>
 							<p class="align-center">
 								<b>First time visiting?</b> Jump to the 
 								<a href="#about-contests">About Livestream Events</a> 
@@ -220,7 +220,7 @@
 									<td>Livestream Start: <br><a href="#latest-event">2024-TBA at 00:00</a></td>
 								</tr>
 								<tr id="table-event-3">
-									<td>ID: 000-000 <br><b>To Be Scheduled</b></td>
+									<td>ID: EXP-002 <br><b>e𝕏PB Airdrop</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Livestream Start: <br><a href="#latest-event">2024-TBA at 00:00</a></td>
@@ -252,14 +252,25 @@
 											<h1><a href="#table-next-event">e𝕏PB<br />
 													Bouncy Ball</a></h1>
 										</header>
-										<a href="#" class="image fit"><img src="../assets/images/expb-001.png" alt="Art Thumbnail"></a>
+										<section class="livestream" id="latest-event">
+											<div class="stream video main">
+												<blockquote class="twitter-tweet" data-media-max-width="1920">
+													<p lang="en" dir="ltr">Tunining in at 3 PM in Canada for the scoop! <a
+															href="https://t.co/qoo37QZZXt">https://t.co/qoo37QZZXt</a></p>&mdash; OFiDCrypt e𝕏P Web3™ (@OFiDCrypt) <a
+														href="https://twitter.com/OFiDCrypt/status/1884738784501047782?ref_src=twsrc%5Etfw">January 29, 2025</a>
+												</blockquote>
+												<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+												<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+												<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+												<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+											</div>
 										<p id="event-1-desc">Join us to learn more about what we do! Explore Web3 apps for business and social utility, and get rewarded with e𝕏P
 											Web3™. Participate in our contests, and earn rewards by trying out Web3 products from leading partners. Don't miss
 											the physical distribution of e𝕏PB-themed OFiD Stress Balls—perfect for relieving stress, coming soon!</p>
 											
 										
 											<ul class="actions special">
-												<li><a href="livestream.html#latest-event" class="button">Watch Event</a></li>
+												<li><a href="https://twitter.com/OFiDCrypt/status/1884738784501047782?ref_src=twsrc%5Etfw" class="button">Watch Event</a></li>
 											</ul>
 									</article>
 								</section>
