Make some adjustments and removals to livestream.html and adapted Rex characte rprofile on ofidkid.html.

--- a/ofidkid.html
+++ b/ofidkid.html
@@ -225,12 +225,13 @@
 							<span class="image left" id="rex"><img src="assets/images/ofidkid-rex-01.jpg"
 								alt="OFiD Crew Rex Character"></span>
 						<h2 style="text-align: left;">Meet the Crew: Rex</h2>
-						<p>Rex is the cute and shy member of the OFiD Crew, always wearing his denim vest and glasses. His striking red color
-							and short, soft fur make him stand out in a busy crowd! Though introverted by nature, Rex is dedicated to fostering
-							a welcoming and supportive community. Rex, also known as "He-Rex," struts about with growing confidence and
-							leadership. Rex's specs, or glasses, are a charming and essential part of his look, enhancing both his vision and
-							his approachable demeanor. He-Rex might be soft-spoken, but his actions speak volumes, making him an invaluable
-							member of the OFiD Crew.</p>
+						<p>Rex is the cute and shy member of the OFiD Crew, always wearing his denim vest and glasses. With this look and his
+							short, soft fur and striking red color, he is often seen as a stern and serious figure! Though introverted by
+							nature, Rex is incredibly smart and loves to give people the rundown of the latest tech specs. Speaking of which,
+							Rex's specs, or glasses, are a charming and essential part of his look, enhancing both his vision and his
+							approachable demeanor. Rex, also known as "He-Rex," struts about with growing confidence and leadership. He might be
+							soft-spoken, but his
+							actions speak volumes, making him an invaluable member of the OFiD Crew.</p>
 						</div>
 					</div>
 				</article>
