Updated intro text, logo and tags on index.html.

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
 				<!-- Intro -->
 				<div id="intro">
 					<h1 class="left-aligned">
-						<span class="smaller-heading">Start with</span><br />
-						One Crypto<br />
+						<span class="smaller-heading">A Simple Start</span><br />
+						Two Tokens<br />
 						One Wallet
 					</h1>
 				
 					<div class="images-with-plus">
 						<a href="/index.html#expb-get" class="no-style-link">
-							<img src="/assets/images/300x300-solana.png" alt="Solana Logo & Jump to eXBP">
+							<img src="/assets/images/300x300-solana-expb.png" alt="Solana Logo & Jump to eXBP">
 						</a>						
 						<span class="plus-sign">+</span>
 						<a href="https://phantom.com/download" class="no-style-link">
-							<img src="/assets/images/300x300-phantom.png" alt="Code Inc. Logo & Link to VIP">
+							<img src="/assets/images/300x300-phantom.png" alt="Phantom Logo & Link to Download">
 						</a>
 					</div>
 					<div>
-						<h1 class="left-aligned">Your Portfolio<br />
-							<span class="smaller-heading-bottom">Simplified</span></h1>
+						<h1 class="left-aligned">Web3 Discovery<br />
+							<span class="smaller-heading-bottom">With Rewards</span></h1>
 					</div>
 				
 					<div id="custom-subheading">
