Updated index text and moved incorrectly placed image file.

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-trending.jpg"
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
-												<h3 class="quick-start-title">Get e𝕏PB</h3>
-												<p class="align-center">Bouncy Ball · On Solana <br />
+												<h3 class="quick-start-title">Get Bouncy Ball</h3>
+												<p class="align-center">e𝕏PB · On Solana <br />
 													In Your Wallet</p>
 												<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
 											</div>
@@ -237,7 +237,7 @@
 								<span class="image left"><img src="/assets/images/x-livestream.png" alt="Featured Icon"></span>
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Watch Livestreams</h3>
-									<p class="align-center">News · Updates · Contests · Giveaways</p> <button class="button"><a
+									<p class="align-center">News · Updates · Airdrops · Rewards</p> <button class="button"><a
 											href="/pages/livestream.html#livestream-title">Learn More</a></button>
 								</div>
 							</article>
