Minor adjustmentrs to text on livestream.html.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -216,9 +216,9 @@
 								</tr>
 								<tr id="table-event-3">
 									<td>ID: PDA-001 <br><b><a href="#PDA-001">Perk Digital Art</a></b></td>
-									<td>Entries Open: <br><b>Cancelled at 00:00</b></td>
-									<td>Entires Close: <br><b>Cancelled at 00:00</b></td>
-									<td>Livestream Start: <br><b>Cancelled at 00:00</b></td>
+									<td>Entries Open: <br><b>Cancelled</b></td>
+									<td>Entires Close: <br><b>Cancelled</b></td>
+									<td>Livestream Start: <br><b>Cancelled</b></td>
 								</tr>
 							</tbody>
 						</table>
@@ -244,7 +244,7 @@
 											<span class="date">EXP-002 e𝕏P WEB3™<br />
 											<a href="#event-1-desc">More Details</a></span>
 
-											<h1><a href="#table-next-event">Airdrop: e𝕏PB Giveaway &<br />
+											<h1><a href="#table-next-event">Airdrop: Giveaway &<br />
 													OfiD Progress Updates</a></h1>
 										</header>
 										<section class="livestream" id="latest-event">
